Fix: Clean up Header and Footer components

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,8 +2,8 @@
 
 ---
 
-<footer class="pt-16 pb-12 sm:pt-24 sm:pb-16">
-    <p class="text-sm">
-        <a href="https://docs.netlify.com/frameworks/astro/" class="decoration-dashed text-primary underline-offset-8"> Astro on Netlify </a>
+<footer class="py-10 mt-auto border-t border-gray-100 dark:border-gray-800">
+    <p class="text-sm text-gray-400 text-center">
+        &copy; {new Date().getFullYear()} chan99k. All rights reserved.
     </p>
 </footer>
