--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import '../../src/styles/globals.css';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import Search from '../components/Search';
 
 interface Props {
     title: string;
@@ -31,6 +32,7 @@ const { title } = Astro.props;
         </script>
     </head>
     <body class="antialiased text-black bg-white dark:bg-black dark:text-white selection:bg-accent selection:text-white">
+        <Search client:idle />
         <div class="flex flex-col min-h-screen">
             <Header />
             <main class="grow flex flex-col w-full max-w-[1720px] mx-auto px-5 sm:px-10">
