--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -2,6 +2,7 @@
 import { type CollectionEntry, getCollection } from 'astro:content';
 import Layout from '../../layouts/Layout.astro';
 import FormattedDate from '../../components/FormattedDate.astro';
+import Giscus from '../../components/Giscus';
 
 export async function getStaticPaths() {
 	const posts = await getCollection('blog');
@@ -31,12 +32,9 @@ const { Content } = await post.render();
         </div>
         
         <div class="mt-16 pt-8 border-t border-gray-100 dark:border-gray-800">
-            <!-- Giscus Comment Placeholder -->
-            <div id="comments"></div>
+            <div id="comments">
+                <Giscus client:visible />
+            </div>
         </div>
 	</article>
 </Layout>
-
-<script is:inline>
-  // Simple Giscus Script Injection could go here later or component
-</script>
