--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,7 @@ const posts = (await getCollection('blog')).sort(
 );
 ---
 
-<Layout title="Blog - chan99k">
+<Layout title="Blog - chan99k" description="Read latest articles about web development, design systems, and software engineering.">
 	<section class="py-12">
         <h1 class="text-4xl font-bold mb-12">Blog</h1>
 		<div class="flex flex-col">
