--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -17,7 +17,7 @@ const post = Astro.props;
 const { Content } = await post.render();
 ---
 
-<Layout title={post.data.title}>
+<Layout title={post.data.title} description={post.data.description} image={post.data.heroImage}>
 	<article class="py-12 max-w-3xl mx-auto">
         <header class="mb-10 text-center">
             <div class="mb-4 text-gray-400 text-sm font-mono">
