--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -17,7 +17,7 @@ const project = Astro.props;
 const { Content } = await project.render();
 ---
 
-<Layout title={project.data.title}>
+<Layout title={project.data.title} description={project.data.description} image={project.data.heroImage}>
 	<article class="py-12 max-w-4xl mx-auto">
         <header class="mb-12">
              <div class="aspect-video w-full overflow-hidden rounded-xl bg-gray-100 dark:bg-gray-900 mb-8 border border-gray-100 dark:border-gray-800">
