Feat: Localize content and UI to Korean

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,8 @@
 ---
 const navItems = [
-    { linkText: 'Blog', href: '/blog' },
-    { linkText: 'Projects', href: '/projects' },
-    { linkText: 'About', href: '/about' }
+    { linkText: '블로그', href: '/blog' },
+    { linkText: '프로젝트', href: '/projects' },
+    { linkText: '소개', href: '/about' }
 ];
 
 import ThemeToggle from './ThemeToggle';
