--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,11 +10,11 @@ interface Props {
     image?: string;
 }
 
-const { title, description = "chan99k's personal blog and portfolio.", image = "/placeholder-social.jpg" } = Astro.props;
+const { title, description = "chan99k의 개인 블로그 및 포트폴리오입니다.", image = "/placeholder-social.jpg" } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="ko">
     <head>
         <meta charset="UTF-8" />
         <title>{title}</title>
@@ -53,7 +53,7 @@ const { title, description = "chan99k's personal blog and portfolio.", image = "
         <Search client:idle />
         <div class="flex flex-col min-h-screen">
             <Header />
-            <main class="grow flex flex-col w-full max-w-[1720px] mx-auto px-5 sm:px-10">
+            <main class="grow flex flex-col w-full max-w-[1720px] mx-auto px-5 sm:px-10 page-enter">
                 <slot />
             </main>
             <Footer />
