--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,9 +8,9 @@ const posts = (await getCollection('blog')).sort(
 );
 ---
 
-<Layout title="Blog - chan99k" description="Read latest articles about web development, design systems, and software engineering.">
+<Layout title="블로그 - chan99k" description="웹 개발, 디자인 시스템, 소프트웨어 엔지니어링에 관한 최신 글들을 확인하세요.">
 	<section class="py-12">
-        <h1 class="text-4xl font-bold mb-12">Blog</h1>
+        <h1 class="text-4xl font-bold mb-12">블로그</h1>
 		<div class="flex flex-col">
 			{
 				posts.map((post) => (
