--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -53,7 +53,7 @@ const { title, description = "chan99k의 개인 블로그 및 포트폴리오입
         <Search client:idle />
         <div class="flex flex-col min-h-screen">
             <Header />
-            <main class="grow flex flex-col w-full max-w-[1720px] mx-auto px-5 sm:px-10 page-enter">
+            <main class="grow flex flex-col w-full max-w-[1280px] mx-auto px-10 sm:px-16 lg:px-24 page-enter">
                 <slot />
             </main>
             <Footer />
