--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,15 +2,24 @@
 import { getCollection } from 'astro:content';
 import Layout from '../../layouts/Layout.astro';
 import PostCard from '../../components/PostCard.astro';
+import TagChips from '../../components/TagChips.astro';
+import { getRootTags } from '../../utils/tags';
 
-const posts = (await getCollection('blog')).sort(
+const posts = (await getCollection('blog', ({ data }) => data.draft !== true)).sort(
 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
+
+const rootTags = getRootTags(posts);
 ---
 
 <Layout title="블로그 - chan99k" description="웹 개발, 디자인 시스템, 소프트웨어 엔지니어링에 관한 최신 글들을 확인하세요.">
 	<section class="py-12">
-        <h1 class="text-4xl font-bold mb-12">블로그</h1>
+        <h1 class="text-4xl font-bold mb-8">블로그</h1>
+		{rootTags.length > 0 && (
+			<div class="mb-10">
+				<TagChips tags={rootTags} size="md" />
+			</div>
+		)}
 		<div class="flex flex-col">
 			{
 				posts.map((post) => (
